syntax = "proto3";
package archiver.v1;
import "google/protobuf/timestamp.proto";
option csharp_namespace = "Archiver.Api.Grpc";

service ArchiverService {
	rpc UploadRawArchive (stream ArchiveRequest) returns (ArchiveResponse);
	rpc ArchiveDataset (stream ArchiveRequest) returns (ArchiveResponse); // Test service
}

message ArchiveRequest {
	oneof payload {
		DatasetMetadata metadata = 1;
		SignalDataChunk data_chunk = 2;
	}
}

message DatasetMetadata { //Once per acquisition
	string dataset_id = 1;
	string device_id = 2;
	google.protobuf.Timestamp start_time_utc = 3;
	uint32 num_channels = 4;
	//uint32 channel_index = 4;
	//string sensor_id = 5; 
	//string channel_input = 6;
	uint32 sample_rate_hz = 5; 
}

message SignalDataChunk { //the actual channel data
	repeated sint32 raw_adc_values = 1;
	uint32 sequence_number = 2;
}

message ArchiveResponse { 
	string dataset_id = 1; 
	string message = 2; 
	bool success = 3;
	int64 chunks_received = 4; // TODO: modify to uint variant
	int64 samples_received = 5; // TODO: modify to uint variant
} 
